# autotools_ex

./: .gitignore  LICENSE  README  build.sh  clean.sh  configure.ac  scratch.c  setup.sh
src/: Makefile.am  main.c  scratch.h
