#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(cprjexample, alpha, changeme@cprjexample.com)
AM_INIT_AUTOMAKE(cprjexample, alpha)
AC_CONFIG_SRCDIR(src/struct.h)
AC_CONFIG_HEADERS(config.h)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile
                 src/Makefile)
AC_OUTPUT
